# src/main/java/tech/aesys/finale/routine/dto/request/AlertDtoRequest.java
@@ -1,0 +1,59 @@
+package tech.aesys.finale.routine.dto.request;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.LocalDateTime;
+import java.util.Set;
+
+@AllArgsConstructor
+@NoArgsConstructor
+public class AlertDtoRequest {
+
+    private LocalDateTime oraInizio;
+    private LocalDateTime oraFine;
+    private Set<String> codici;
+    private String testoNotifica;
+    private String citta;
+
+    public String getCitta() {
+        return citta;
+    }
+
+    public void setCitta(String citta) {
+        this.citta = citta;
+    }
+
+    public String getTestoNotifica() {
+        return testoNotifica;
+    }
+
+    public void setTestoNotifica(String testoNotifica) {
+        this.testoNotifica = testoNotifica;
+    }
+
+    public Set<String> getCodici() {
+        return codici;
+    }
+
+    public void setCodici(Set<String> codici) {
+        this.codici = codici;
+    }
+
+    public LocalDateTime getOraFine() {
+        return oraFine;
+    }
+
+    public void setOraFine(LocalDateTime oraFine) {
+        this.oraFine = oraFine;
+    }
+
+    public LocalDateTime getOraInizio() {
+        return oraInizio;
+    }
+
+    public void setOraInizio(LocalDateTime oraInizio) {
+        this.oraInizio = oraInizio;
+    }
+}
